Password confirmation fix

--- a/app/views/users/registrations/_form.html.erb
+++ b/app/views/users/registrations/_form.html.erb
@@ -67,7 +67,7 @@
           <% else %>
             <td class="description"><%= f.label :password, "New Password:" %></td>
           <% end %>
-          <td class="entry"><%= f.password_field :password, :validate =>{ :presence => f.object.new_record?, :confirmation => true } %></td>
+          <td class="entry"><%= f.password_field :password, :validate =>{ :presence => f.object.new_record? } %></td>
           <% if f.object.new_record? %>
             <td class="star"><%= mark_required(resource, :password) %></td>
           <% end %>
