--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -5,7 +5,7 @@
 </head>
 <body marginheight="0" topmargin="0" marginwidth="0" leftmargin="0" bgcolor="#e4e4e4" style="padding-top:0px;padding-right:0px;padding-bottom:0px;padding-left:0px;margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;">
 <table cellspacing="0" border="0" cellpadding="0" width="100%" bgcolor="#e4e4e4">
-  <table cellspacing="0" border="0" cellpadding="0" width="600" bgcolor="#fff" align="center">
+  <table cellspacing="0" border="0" cellpadding="0" width="600" bgcolor="#ffffff" align="center">
     <tr valign="top">
       <td valign="top">
         <table cellspacing="0" cellpadding="0" border="0" width="600" align="center">
@@ -13,8 +13,8 @@
             <td bgcolor="#3a99e2">
               <table cellspacing="0" cellpadding="0" border="0" align="center" width="525">
                 <tr>
-                  <td height="24" color="#fff">
-                    <a href="#" style="font-family: Arial, sans-serif; font-size: 11px; color: #fff; text-decoration: none;"><%= @resource.email %></a>
+                  <td height="24" color="#ffffff">
+                    <a href="#" style="font-family: Arial, sans-serif; font-size: 11px; color: #ffffff; text-decoration: none;"><%= @resource.email %></a>
                   </td>
                   <td height="24" align="right" style="font-family: Arial, sans-serif;">
                     <span style="font-size: 11px;">your email not loading properly?&nbsp;&nbsp;</span><a style="font-family: Arial, sans-serif; font-size: 11px; color: #fff;" href="#">View
