--- a/app/views/conferences/_stats_widget.html.erb
+++ b/app/views/conferences/_stats_widget.html.erb
@@ -10,8 +10,8 @@
   <% conferences.each_with_index do |college, i| %>
     <div class="cell clearfix <% if i == conferences.size-1 %>noborder<% end %>">
       <div class="black colname"><%= link_to college.abbrev, college %></div>
-      <div class="red smcount"><%= college.smacks_count %></div>
-      <div class="green greencount"><%= college.redemptions_count %></div>
+      <div class="red smcount"><%= link_to(college.smacks_count, college_smacks_path(college)) %></div>
+      <div class="green greencount"><%= link_to(college.redemptions_count, college_redemptions_path(college)) %></div>
     </div>
   <% end %>
   <% if limit %>
