--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1989,3 +1989,24 @@ div.fb-like-box {
   float: right;
   margin-top: 15px;
 }
+
+#per_page{
+    float:right;
+}
+
+.category_sort_div{
+    float:left;
+}
+
+#per_page .per_page{
+    float:right;
+}
+
+#per_page .per_page li{
+    float:left;
+    margin: 0 0 0 5px;
+}
+
+#per_page .items_per_page{
+    float:right;
+}
