--- a/app/views/shared/_masthead.html.erb
+++ b/app/views/shared/_masthead.html.erb
@@ -17,6 +17,9 @@
 <% if @parent %>
   <div class="content_actions">
     <ul>
+      <% if can? :create, ArticlePost %>
+        <li class="dark_button"><%= link_to "Add Article", @parent.is_a?(College) ? new_college_article_path(@parent) : new_conference_article_path(@parent) %></li>
+      <% end %>
       <li class="dark_button"><%= link_to "Add Smack", @parent.is_a?(College) ? new_college_smack_path(@parent) : new_conference_smack_path(@parent) %></li>
       <li class="dark_button"><%= link_to 'Add Redemption', @parent.is_a?(College) ? new_college_redemption_path(@parent) : new_conference_redemption_path(@parent) %></li>
     </ul>
