--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -11,6 +11,21 @@
       <div class="category_container">
         <div class="content_category">
           <div class="category_title">
+            Articles
+          </div>
+          <ul class="items">
+            <% @articles.each do |post| %>
+              <%= render "posts/small_preview", :post => post %>
+            <% end %>
+          </ul>
+          <div class="view_more_link clear_both">
+            <%= link_to "See all articles", polymorphic_path([ @parent, :articles ]) %>
+          </div>
+        </div>
+      </div>
+      <div class="category_container">
+        <div class="content_category">
+          <div class="category_title">
             Videos
           </div>
           <ul class="items">
@@ -19,7 +34,7 @@
             <% end %>
           </ul>
           <div class="view_more_link clear_both">
-            <%= link_to "See all videos", @parent.is_a?(College) ? college_videos_path(@parent) : conference_videos_path(@parent) %>
+            <%= link_to "See all videos", polymorphic_path([ @parent, :videos ]) %>
           </div>
         </div>
       </div>
@@ -34,23 +49,24 @@
             <% end %>
           </ul>
           <div class="view_more_link clear_both">
-            <%= link_to "See all photos", @parent.is_a?(College) ? college_photos_path(@parent) : conference_photos_path(@parent) %>
+            <%= link_to "See all photos", polymorphic_path([ @parent, :photos ]) %>
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="news">
-      <div class="category_title">
-        News
-      </div>
-      <ul class="items">
-        <% @news.each do |post| %>
-            <%= render "posts/news_preview", :post => post %>
-        <% end %>
-      </ul>
-      <div class="view_more_link">
-        <%= link_to "See all news", @college.is_a?(College) ? college_news_index_path(@college) : conference_news_index_path(@college) %>
+      <div class="category_container">
+        <div class="content_category">
+          <div class="category_title">
+            News
+          </div>
+          <ul class="items">
+            <% @news.each do |post| %>
+              <%= render "posts/news_preview", :post => post %>
+            <% end %>
+          </ul>
+          <div class="view_more_link clear_both">
+            <%= link_to "See all news", polymorphic_path([ @parent, :news_index ]) %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
