edits to error page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -15,7 +15,9 @@
 
       <p>While it can be tough to hold back sometimes when talking smack, Campusmack wants to build an edgy yet clean
         environment for its users. This means absolutely no bullying, nudity, or profanity. Please Smack
-        Responsibly!</p>
+        Responsibly!</p><br>
+
+		<a><%= smacks.new poop %> poop</a>
 
     </div>
   </div>
