--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -58,6 +58,7 @@
 <div class="content standard clearfix">
   <div class="content_actions">
     <ul>
+      <li class="dark_button"><%= link_to "Contest!", contest_path %></li>
       <li class="dark_button"><%= link_to "Add Smack", root_path, :id => "add_smack_btn" %></li>
       <li class="dark_button"><%= link_to 'Add Redemption', root_path, :id => "add_redemption_btn" %></li>
     </ul>
