--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,9 @@
 <div class="content new_level with_submenu clearfix">
   <%= render :partial => 'shared/masthead' %>
+  <%= render :partial => 'shared/contest_button' if controller_name == "contest" %>
   <div class="content_title"><%= @title %></div>
   <div class="content_stats clearfix">
-    <%= render 'shared/photovideomenu' %>
+    <%= render 'shared/photovideomenu' if controller_name != "contest" %>
     <%= render 'shared/search' %>
   </div>
 
