--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -30,8 +30,8 @@
     <%= link_to(truncate(post.user.try(:username), :length => 16), post.user, :class => :author) %>
   </div>
   <div class="description">
-    <%= link_to "Article Preview", post.news_post.url, :class => 'snap_shots' unless post.news_post.blank? %>
-    <%= censoring(post.summary) %>
+   <p> <%= link_to "Article Preview", post.news_post.url, :class => 'snap_shots' unless post.news_post.blank? %>
+    <%= censoring(post.summary) %></p>
   </div>
   <div class="actions">
     <%= share_and_voting_icons(post, :post) %>
