--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -72,12 +72,16 @@
     </ul>
     <%= render :partial => 'shared/search' %>
   </div>
-  <div class="content_title"><h1>Most Smacked College</h1></div>
+  
+   <div class="most_smacked">
+  <div class="most_smacked_title"><h2>Most Smacked College</h2></div>
   <div class="content_container clearfix">
     <div class="new_line"></div>
-    <div><h1><%= @colleges.first.name %></h1></div>
+    <div class="most_college_name"><h3><%= @colleges.first.name %></h3></div>
+	<div class="most_smack_number"><h3><%= @colleges.first.smacks_count %></h3></div>
   </div>
-  <div class="content_title"><h1>Featured Articles</h1></div>
+  </div>
+  <div class="title_underlined"><h2>Featured Articles</h2></div>
   <div class="content_container clearfix">
     <div class="new_line"></div>
     <ul class="items featured_articles">
@@ -86,7 +90,7 @@
       <% end %>
     </ul>
   </div>
-  <div class="content_title"><h1>Smacks of the Week</h1></div>
+  <div class="title_underlined"><h2>Smacks of the Week</h2></div>
   <div class="content_container clearfix">
     <div class="new_line"></div>
     <%= render :partial => 'sotw', :collection => Post.smacks_of_week %>
