--- a/app/views/posts/_articles_preview.html.erb
+++ b/app/views/posts/_articles_preview.html.erb
@@ -10,11 +10,11 @@
     <h3><%= link_to truncate(post.title, :length => 24), post, :title => post.title %></h3>
     <div class="which-college"><span>by:</span> <%= link_to(truncate(post.user.try(:username), :length => 16), post.user, :class => :author) %></div>
     <div class="votes">
-      <%= voting_icons(post, :preview) %>
+     <%= share_and_voting_icons(post, :show) %>
     </div>
   </div>
 <div class="summary">
     <p><%= censoring(truncate(post.summary, :length => 300)) %></p>
   </div>
-  <%= share_and_voting_icons(post, :preview) %>
+
 </li>
