--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -90,7 +90,7 @@
   </div>
   <div class="title_underlined"><h2>Smacks of the Week</h2></div>
   <div class="content_container clearfix">
-    <div class="new_line"></div>
-    <%= render :partial => 'sotw', :collection => Post.smacks_of_week %>
+    <div class="home_smacks_of_week">
+    <%= render :partial => 'sotw', :collection => Post.smacks_of_week %></div>
   </div>
 </div>
