--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -56,6 +56,7 @@
   </div>
 <% end %>
 <div class="content standard clearfix">
+  <div class="content_actions_home">  
   <div class="content_actions">
     <ul>
       <li class="dark_button"><%= link_to "Contest!", contest_path %></li>
@@ -63,7 +64,7 @@
       <li class="dark_button"><%= link_to 'Add Redemption', root_path, :id => "add_redemption_btn" %></li>
     </ul>
   </div>
-  <div class="content_title"><h1>Welcome to Campusmack</h1></div>
+</div>
   <div class="content_stats">
     <ul class="inner_menu">
       <li>
