--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -8,7 +8,7 @@
 
   <div class="content_container">
     <div class="photovideo">
-      <h3 class="content_title">Featured Articles</h3>
+      <h3 class="college_content_title_first">Featured Articles</h3>
       <div class="category_container">
         <div class="content_category">
           <ul class="items articles">
@@ -21,7 +21,7 @@
           </div>
         </div>
       </div>
-      <h3 class="content_title">User Posts</h3>
+      <h3 class="college_content_title">User Posts</h3>
       <div class="category_container">
         <div class="content_category ">
           <div class="category_title">
