home page most smacked college changes

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -75,8 +75,8 @@
     <div class="title_underlined_first"><h2>Most Smacked Campus</h2></div>
     <div class="most_smacked">
 	 <div class="centered">
-    <div class="most_smacked_title"><h3><strong style="color:#fff"><%= @colleges.first.name %></strong>&nbsp;with</h3></div>
-	<div class="most_smacked_number"><h3><strong  style="color:#fff"><%= @colleges.first.smacks_count %></strong>&nbsp;smacks</h3></div>
+    <div class="most_smacked_title"><h3><strong><%= @colleges.first.name %>:&nbsp;</strong></h3></div>
+	<div class="most_smacked_number"><h3><strong><%= @colleges.first.smacks_count %></strong>&nbsp;smacks</h3></div>
   </div>
   </div>
   <div class="title_underlined"><h2>Featured Articles</h2></div>
